--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "start": "node src/server/index.js",
-  "dev": "nodemon src/server/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server/index.js",
+    "dev": "nodemon src/server/index.js"
   },
   "keywords": [],
   "author": "",
@@ -17,8 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongodb": "^6.18.0",
-    "mongoose": "^8.17.0",
-    "vite": "^7.0.6"
+    "mongoose": "^8.17.0"
   },
   "devDependencies": {
     "concurrently": "^9.2.0",
